css/main.css
/* ... */
/*
  Navigation
*/

nav ul li, nav button {
  font-family: "Century Gothic Bold"!important;
  font-size: 14px!important;
}

.side_menu_link {
  font-size: 32px!important;
}

#small_social_media {
  bottom: 0;
}



nav #side_menu {
  /* Center vertically */
  top: 50%; 
  transform: translateY(-50%);
}

nav #side_menu a {
  font-family: "Century Gothic Bold"!important;
  color: var(--dimmed-white);
}

nav #side_menu a:hover {
  color: var(--white);
}

nav button, nav button:active, nav button:focus {
  border: none!important;
}

.navbar_side_menu {
  background-color: var(--dark)!important; 
  background: top / contain url("../img/purplish-gradient.png") no-repeat, top right url("../img/thread.svg") no-repeat;
  z-index: -999999;
  /* display: none; */
  opacity: 0;
}

/* Buttons */

.btn_rounded_outline {
  border: solid 1px var(--green)!important;
  padding: 0.7rem 3rem!important;
}

.btn_rounded_outline:hover, .btn_rounded_outline:active, .btn_rounded_outline:focus {
  background: var(--green)!important;
  box-shadow: 0 15px 25px 0 var(--green-opac-25);
}

.btn_rounded_outline_active {
  border: solid 1px var(--green)!important;
  padding: 0.7rem 3rem!important;
  background: var(--green)!important;
  box-shadow: 0 15px 25px 0 var(--green-opac-25);
}

.btn_rounded_outline_yellow_active {
  border: solid 1px var(--green)!important;
  padding: 0.7rem 3rem!important;
  background: var(--yellow)!important;
  box-shadow: 0 15px 25px 0 var(--green-opac-25);
}

/* Hero */

.hero_sub {
  font-family: "Century Gothic Bold"!important;
  font-size: 14px!important;
  background: rgb(43,48,135);
  background: -moz-linear-gradient(0deg, rgba(43,48,135,1) 0%, rgba(0,180,236,1) 100%);
  background: -webkit-linear-gradient(0deg, rgba(43,48,135,1) 0%, rgba(0,180,236,1) 100%);
  background: linear-gradient(0deg, rgba(43,48,135,1) 0%, rgba(0,180,236,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2b3087",endColorstr="#00b4ec",GradientType=1);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: 20%;
}

#hero h1 {
  font-family: "Century Gothic Bold"!important;
  font-size: 36px!important;
}

#hero p {
  font-family: "Century Gothic Regular"!important;
  font-size: 14px!important;
  color: var(--lighter-white-2)!important;
  opacity: 0.6;
}

#hero_gadget_carousel_wrapper {
  bottom: 0;
}

/* Slick */

.slick-dots {
  visibility: hidden; /* hide on small viewport */
}

#presale_details .slick-dots {
  visibility: visible;
  display: flex;
  justify-content: center;
  align-items: baseline;
}

.slick-dots span.dot_hollow {
  font-size: 6px!important;
}
.slick-dots span.dot_filled {
  font-size: 16px!important;
}
.slick-dots span.dot_hollow, .slick-dots span.dot_filled {
  cursor: pointer;
}
.slick-dots span.dot_filled, .slick-active span.dot_hollow {
  display: none;
}
.slick-active span.dot_filled {
  display: block;
}

.hero_carousel .slick-dots:last-of-type {
  visibility: hidden;
}

#color_year_carousel_indicator button:hover .point_line {
  visibility: visible!important;
}

@keyframes show-point-line {
  0% { clip-path: inset(0 99% 0 0); }
  100% { clip-path: inset(0 0% 0 0); }
}

#color_year_carousel_indicator button .point_line_body {
  clip-path: inset(100%);
}

#color_year_carousel_indicator button:hover .point_line_body, #color_year_carousel_indicator button:focus .point_line_body, #color_year_carousel_indicator button:active .point_line_body {
  animation: 500ms ease-out show-point-line;
  clip-path: inset(0 0% 0 0);
}

#color_year_carousel_indicator span {
  font-family: "Century Gothic Bold"!important;
  font-size: 18px!important;
}

#color_year_carousel h3 {
  font-family: "Century Gothic Bold"!important;
  font-size: 32px!important;
  border-left: 2px solid ;
  border-color: var(--pink);
}

#color_year_carousel p {
  font-family: "Century Gothic Regular"!important;
  font-size: 18px!important;
  color: rgba(255,255,255,.6);
}


#color_year_number_carousel span.cy_num {
  background: var(--bluish-dark);
  width: 400px;
  font-family: "Century Gothic Bold"!important;
  font-size: 200px!important;
}
#color_year_number_carousel span.cy_num_sub {
  font-family: "Century Gothic Bold"!important;
  font-size: 24px!important;
}

.slick-list {
  overflow: visible;
}
.slick-slide {
  transform: translate3d(0,0,0);
  opacity: 0;
  transition: opacity 500ms ease-out;
}

#presale_details .slick-slide {
  transition: none;
  opacity: 1;
}

.slick-slide.slick-current {
  opacity: 1;
}

/* .slick-list {
  overflow: visible;
}
.img_laptop, .img_phones {
  visibility: hidden;
}
.slick-active.img_laptop, .slick-active.img_laptop::before, .slick-active.img_phones, .slick-active.img_phones {
  visibility: visible;
} */

#color_year_carousel_header {
  height: 75vh!important;
}

#color_year_carousel_header h1 {
  font-family: "Century Gothic Bold"!important;
  font-size: 40px!important;
}


#for_creators, #for_holders {
  background: var(--less-dark); 
  border-radius: 25px;
}

#for_holders {
  /* transform: translateY(90px); */
}

#for_creators span {
  color: var(--green);
}

#for_holders span {
  color: var(--blue);
}

#for_creators h3, #for_holders h3 {
  font-family: "Century Gothic Bold"!important;
  font-size: 36px!important;
}

#for_creators p, #for_holders p {
  font-family: "Century Gothic Regular"!important;
  font-size: 16px!important;
  color: rgba(255,255,255,.5);
}

#for_creators a, #for_holders a {
  font-family: "Century Gothic Bold"!important;
  font-size: 14px!important;
}

#for_creators svg {
  filter: drop-shadow(0 15px 25px rgb(34 167 93 / .25));
}

#for_holders svg {
  filter: drop-shadow(0 15px 25px rgb(34 120 212 / .25));
}

#makes_different_decor {
  background: right / cover url("../img/colorful-shapes-flip-hor.jpg") no-repeat;
  border-radius: 150px 0 0 0; 
  height: 300px;
}

#makes_different_text {
  background: var(--white);
  border-radius: 0 150px 0 0; 
}
/* ... */

